<resources>
    <string name="app_name">ImFitPlus</string>
    <string name="mensagem_boas_vindas">Descubra seu perfil de saúde e receba recomendações personalizadas</string>
    <string name="botao_boas_vindas">Comece Aqui</string>
    <string name="botao_form">Calcular</string>
    <string name="voltar">voltar</string>
    <string name="peso_atual_texto">peso atual: </string>
    <string name="peso_atual_valor">\n</string>
    <string name="peso_ideal">Peso ideal:</string>
    <string name="calcular_gasto_calorico">Calcular Gasto Calórico</string>
    <string name="resultado_do_imc">Resultado do IMC</string>
    <string name="categoria_imc">Normal</string>
    <string name="categoria_text">Categoria:</string>
    <string name="tmb_label">TMB:</string>
    <string name="gasto_total_label">Gasto Total:</string>
    <string name="calcular_peso_ideal">Calcular Peso Ideal</string>
    <string name="nome_form">Nome</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="idade">Idade</string>
    <string name="digite_sua_idade">Digite sua idade</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="altura_cm">Altura (cm)</string>
    <string name="digite_sua_altura">Digite sua altura</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="digite_seu_peso">Digite seu peso</string>
    <string name="n_vel_de_atividade">Nível de Atividade</string>
    <string name="logo_do_app">logo do app</string>
    <string name="diferenca_pesos_texto">Diferença entre peso ideal e atual: </string>
    <string name="resumo_da_saude">Resumo da Saúde</string>
    <string name="nome_resumo">Nome:</string>
    <string name="imc_resumo">Imc:</string>
    <string name="imc">imc:</string>
    <string name="imc_toolbar">IMC</string>
    <string name="gasto_calorico_toolbar">Gasto Calórico</string>
    <string name="peso_ideal_toolbar">Peso Ideal</string>
    <string name="resumo_toolbar">Resumo</string>
    <string name="botao_calcular_menu">Calcular novo dado</string>
    <string name="botao_historico_menu">Histórico</string>
    <string name="menu">Menu</string>
    <string name="visualizar_historico">Visualizar Histórico</string>
    <string name="historico_saude_toolbar">historico saude</string>
    <string name="label_imc_tile">IMC:</string>
    <string name="peso_ideal_label_tile">Peso Ideal:</string>
    <string name="tmb_label_tile">TMB</string>
    <string name="dia_nascimento">dia</string>
    <string name="mes_nascimento">mes nascimento</string>
    <string name="ano_nascimento">ano nascimento</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="frequencia_maxima">Frequencia Máxima:</string>
    <string name="zona_de_queima_de_gordura">Zona de queima de gordura</string>
    <string name="zona_leve">Zona Leve</string>
    <string-array name="niveis_atividade">
        <item>Sedentário</item>
        <item>Leve</item>
        <item>Moderado</item>
        <item>Intenso</item>
    </string-array>
</resources>