<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo_do_app"
            android:src="@drawable/img"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Nome -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_form"
            android:textColor="@color/app_green" />
        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/digite_seu_nome"
            android:textColor="@color/app_green"
            app:hintTextColor="@color/app_green" />

        <!-- Idade -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_de_nascimento"
            android:textColor="@color/app_green" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/dia"
                android:layout_width="50dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/dia_nascimento"
                android:textColor="@color/app_green"
                app:hintTextColor="@color/app_green" />

            <EditText
                android:id="@+id/mes"
                android:layout_weight="1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/mes_nascimento"
                android:textColor="@color/app_green"
                app:hintTextColor="@color/app_green" />

            <EditText
                android:id="@+id/ano"
                android:layout_width="50dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/ano_nascimento"
                android:textColor="@color/app_green"
                app:hintTextColor="@color/app_green" />

        </LinearLayout>

        <!-- Sexo -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textColor="@color/app_green" />
        <RadioGroup
            android:id="@+id/rgSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:textColor="@color/app_green" />

            <RadioButton
                android:id="@+id/rbFeminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feminino"
                android:textColor="@color/app_green" />
        </RadioGroup>

        <!-- Altura -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura_cm"
            android:textColor="@color/app_green" />
        <EditText
            android:id="@+id/altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/digite_sua_altura"
            android:textColor="@color/app_green"
            app:hintTextColor="@color/app_green" />

        <!-- Peso -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso_kg"
            android:textColor="@color/app_green" />
        <EditText
            android:id="@+id/peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/digite_seu_peso"
            android:textColor="@color/app_green"
            app:hintTextColor="@color/app_green" />

        <!-- Nível de Atividade -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_vel_de_atividade"
            android:textColor="@color/app_green" />
        <Spinner
            android:id="@+id/nivelAtividade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/niveis_atividade"/>

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/botao_enviar_formulario"
            android:layout_gravity="center"
            android:backgroundTint="#006600"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/botao_form"/>
    </LinearLayout>
</ScrollView>
