<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo_do_app"
        android:src="@drawable/img"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/mensagem_boas_vindas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/mensagem_boas_vindas"
        android:text="@string/mensagem_boas_vindas"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/botao_comecar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="#006600"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensagem_boas_vindas"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/botao_boas_vindas"/>

    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/botao_historico"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="#006600"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botao_comecar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/visualizar_historico"/>

</androidx.constraintlayout.widget.ConstraintLayout>